# image_lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  record.txt
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  windows
batch/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  batch.txt
image/: convert.py
lib/: CMakeLists.txt  bmp.cpp  contour.cpp  edge.cpp  exchange.cpp  filter.cpp  histogram.cpp  hough.cpp  menu.cpp  program.cpp  region.cpp  region_split.cpp  threshold.cpp
lib/include/: bmp.h  contour.h  edge.h  exchange.h  filter.h  histogram.h  hough.h  include.h  menu.h  program.h  region.h  region_split.h  threshold.h
ppt/: 2图像基础.ppt  4几何变换.ppt  7图像分割.ppt  图像处理编程作业-2023.pptx
